# KAPRA-TimeSeries-Anonymization

./: .gitingore  README.md  k-anon.py  pyproject.toml
data/: naive_anonymized.csv  remote_work_activity_raw.csv
docs/: _config.yml  dataset-generation.md  index.md  k-anon-failure.md  kapra-algo-results.md  kapra-algo.md  kapra-approach.md  naive-algo-results.md  naive-algo.md  optimization_report.md
docs/data/: dataset.py  dataset_raw.csv  k-anon.csv  kapra_anonymized.csv  kapra_optimization_results.csv  naive_anonymized.csv  naive_optimization_results.csv  remote_work_activity_raw.csv
src/: dataset.py  generate_plots.py  k-anon.py  k_anon.py  kapra_anonymization.py  kapra_utils.py  naive_anonymization.py  optimize_kapra.py  optimize_naive.py  sax_utils.py
