[project]
name = "kapra-timeseries-anonymization"
version = "0.1.0"
description = ""
authors = [
    {name = "fderissoo",email = "fede.risso2002@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",       # Fondamentale per i CSV
    "matplotlib",   # Fondamentale per i grafici
    "seaborn",      # Per grafici più belli (opzionale)
    "pypdf (>=6.6.2,<7.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
